syntax = "proto3";

package glist;

option go_package = "flydb/lib/proto/glist";

service GListService {
  // example
  rpc LPush(GListLPushRequest) returns (GListLPushResponse) {}
  rpc LPushs(GListLPushsRequest) returns (GListLPushsResponse) {}
  rpc RPush(GListRPushRequest) returns (GListRPushResponse) {}
  rpc RPushs(GListRPushsRequest) returns (GListRPushsResponse) {}
  rpc LPop(GListLPopRequest) returns (GListLPopResponse) {}
  rpc RPop(GListRPopRequest) returns (GListRPopResponse) {}
  rpc LRange(GListLRangeRequest) returns (GListLRangeResponse) {}
  rpc LLen(GListLLenRequest) returns (GListLLenResponse) {}
  rpc LRem(GListLRemRequest) returns (GListLRemResponse) {}
  rpc LIndex(GListLIndexRequest) returns (GListLIndexResponse) {}
  rpc LSet(GListLSetRequest) returns (GListLSetResponse) {}
  rpc LTrim(GListLTrimRequest) returns (GListLTrimResponse) {}
}

message GListLPushRequest {
  string key = 1;
  oneof value {
    string StringValue = 3;
    int32 Int32Value = 4;
    int64 Int64Value = 5;
    float Float32Value = 6;
    double Float64Value = 7;
    bool BoolValue = 8;
    bytes BytesValue = 9;
  };
}

message GListLPushResponse {
  bool ok = 1;
}

message GListLPushsRequest {
  string key = 1;
  repeated value values = 2;
}

message value {
  oneof value {
    string StringValue = 3;
    int32 Int32Value = 4;
    int64 Int64Value = 5;
    float Float32Value = 6;
    double Float64Value = 7;
    bool BoolValue = 8;
    bytes BytesValue = 9;
  };
}

message GListLPushsResponse {
  bool ok = 1;
}

message GListRPushRequest {
  string key = 1;
  oneof value {
    string StringValue = 3;
    int32 Int32Value = 4;
    int64 Int64Value = 5;
    float Float32Value = 6;
    double Float64Value = 7;
    bool BoolValue = 8;
    bytes BytesValue = 9;
  };
}

message GListRPushResponse {
  bool ok = 1;
}

message GListRPushsRequest {
  string key = 1;
  repeated value values = 2;
}

message GListRPushsResponse {
  bool ok = 1;
}

message GListLPopRequest {
  string key = 1;
}

message GListLPopResponse {
  oneof value {
    string StringValue = 3;
    int32 Int32Value = 4;
    int64 Int64Value = 5;
    float Float32Value = 6;
    double Float64Value = 7;
    bool BoolValue = 8;
    bytes BytesValue = 9;
  };
}

message GListRPopRequest {
  string key = 1;
}

message GListRPopResponse {
  oneof value {
    string StringValue = 3;
    int32 Int32Value = 4;
    int64 Int64Value = 5;
    float Float32Value = 6;
    double Float64Value = 7;
    bool BoolValue = 8;
    bytes BytesValue = 9;
  };
}

message GListLRangeRequest {
  string key = 1;
  int32 start = 2;
  int32 stop = 3;
}

message GListLRangeResponse {
  repeated value values = 1;
}

message GListLLenRequest {
  string key = 1;
}

message GListLLenResponse {
  int32 length = 1;
  bool ok = 2;
}

message GListLRemRequest {
  string key = 1;
  int32 count = 2;
  oneof value {
    string StringValue = 3;
    int32 Int32Value = 4;
    int64 Int64Value = 5;
    float Float32Value = 6;
    double Float64Value = 7;
    bool BoolValue = 8;
    bytes BytesValue = 9;
  };
}

message GListLRemResponse {
  int32 count = 1;
  bool ok = 2;
}

message GListLIndexRequest {
  string key = 1;
  int32 index = 2;
}

message GListLIndexResponse {
  oneof value {
    string StringValue = 3;
    int32 Int32Value = 4;
    int64 Int64Value = 5;
    float Float32Value = 6;
    double Float64Value = 7;
    bool BoolValue = 8;
    bytes BytesValue = 9;
  };
}

message GListLSetRequest {
  string key = 1;
  int32 index = 2;
  oneof value {
    string StringValue = 3;
    int32 Int32Value = 4;
    int64 Int64Value = 5;
    float Float32Value = 6;
    double Float64Value = 7;
    bool BoolValue = 8;
    bytes BytesValue = 9;
  };
}

message GListLSetResponse {
  bool ok = 1;
}

message GListLTrimRequest {
  string key = 1;
  int32 start = 2;
  int32 stop = 3;
}

message GListLTrimResponse {
  bool ok = 1;
}
